force-app/main/default/objects/Current_Year_Objective__c/Current_Year_Objective__c.object-meta.xml
<CustomObject>
    <description>Used to outline the Current Year Objectives for a strategic account</description>
    <label>Current Year Objective</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Current Year Objective #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Year Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>