force-app/main/default/objects/Current_Year_Objective__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>