force-app/main/default/objects/Current_Year_Objective__c/fields/Reponsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Reponsible_Party__c</fullName>
    <label>Reponsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Customer Service Manager</fullName>
            </value>
            <value>
                <fullName>Executive Management</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>