force-app/main/default/objects/Current_Year_Objective__c/fields/Strategic_Account_Profile__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Account Profile</label>
    <referenceTo>Strategic_Account_Profile__c</referenceTo>
    <relationshipName>Current_Year_Objective</relationshipName>
    <type>Lookup</type>
</CustomField>